# azure-transcribe

./: .gitignore  README.md  setup.cfg  setup.py
azure_transcribe/: __init__.py  azure_transcribe.py
azure_transcribe/blob/: __init__.py  blob.py
azure_transcribe/fixtures/: __init__.py  azure_languages.py  azure_transcribe_states.py
azure_transcribe/transcribe/: __init__.py  transcribe.py
