[metadata]
name = azure-transcribe
version = 0.1
description = A Python library for interacting with Azure Transcription API
author = Daniel Cuznetov
author_email = danielcuznetov04@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/DCDie/azure-transcribe
project_urls =
    Bug Tracker = https://github.com/DCDie/azure-transcribe/issues
[options]
python_requires = >=3.6
