[metadata]
name = azure-transcribe
version = 0.3.2
description = A Python library for interacting with Azure Transcription API
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Cuznetov
author_email = danielcuznetov04@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
url = https://github.com/DCDie/azure-transcribe
project_urls =
    Bug Tracker = https://github.com/DCDie/azure-transcribe/issues
[options]
python_requires = >=3.6
install_requires = azure-storage-blob==12.12.0, requests==2.27.1
packages = find:

